Added ability to make user account

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,3 +9,4 @@ html
     block content
     script(type="text/javascript", src="/js/jquery.min.js")
     script(type="text/javascript", src="/js/bootstrap.min.js")
+    block scripts
